--- a/configs/kv_coeff-4.0.yaml
+++ b/configs/kv_coeff-4.0.yaml
@@ -6,7 +6,7 @@
 # ============================================================================
 model: SiT-XL/2-EncoderKV
 num-classes: 1000
-encoder-depth: 14
+encoder-depth: 10
 fused-attn: true
 qk-norm: false
 projection-layer-type: conv
@@ -34,7 +34,7 @@ kv-zscore-alpha: 1.0
 # REPA Loss Configuration
 # ============================================================================
 repa-loss: true
-proj-coeff: "0.5"
+proj-coeff: "1.0"
 projection-loss-type: mse_v_norm    # cosine, mse, mse_v, mse_noisy
 spnorm-method: zscore           # none, zscore, zscore_token, layernorm
 zscore-alpha: 0.6
@@ -51,7 +51,7 @@ batch-size: 256
 # ============================================================================
 epochs: 1400
 max-train-steps: 100000
-checkpointing-steps: 10000
+checkpointing-steps: 100000
 sampling-steps: 100000
 gradient-accumulation-steps: 1
 learning-rate: 1e-4
@@ -67,7 +67,7 @@ ema-update-freq: 1
 # Precision & Performance
 # ============================================================================
 allow-tf32: true
-mixed-precision: bf16
+mixed-precision: fp16
 compile: true
 
 # ============================================================================
