--- a/configs/repa_coeff-0.5.yaml
+++ b/configs/repa_coeff-0.5.yaml
@@ -6,7 +6,7 @@
 # ============================================================================
 model: SiT-XL/2-EncoderKV
 num-classes: 1000
-encoder-depth: 14
+encoder-depth: 10
 fused-attn: true
 qk-norm: false
 projection-layer-type: conv
@@ -19,7 +19,7 @@ enc-type: dinov2-b
 enc-layer-indices: "12"     # Encoder layer for K/V extraction (1-based)
 sit-layer-indices: "4"     # SiT layer for K/V injection (1-based)
 stage1-steps: 30000          # Number of steps for Stage 1
-distill-coeff: 4.0          # Coefficient for attention distillation loss
+distill-coeff: 2.0          # Coefficient for attention distillation loss
 
 # Alignment mode: logits, attn_mse, kv_mse
 align-mode: attn_mse
@@ -51,7 +51,7 @@ batch-size: 256
 # ============================================================================
 epochs: 1400
 max-train-steps: 100000
-checkpointing-steps: 10000
+checkpointing-steps: 100000
 sampling-steps: 100000
 gradient-accumulation-steps: 1
 learning-rate: 1e-4
@@ -67,7 +67,7 @@ ema-update-freq: 1
 # Precision & Performance
 # ============================================================================
 allow-tf32: true
-mixed-precision: bf16
+mixed-precision: fp16
 compile: true
 
 # ============================================================================
